--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page-title {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  padding: 20px;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.table-container {
+  border: 2px solid #dee2e6;
+  border-radius: 0.5em !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table th,
+td {
+  text-align: left;
+}
+
+.table th {
+  font-weight: normal;
+}
+
+.table td {
+  font-weight: bold;
+}
+
+.delete-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.form-button {
+  margin: 1em;
 }
